[package]
name = "rumbo_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.167", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["full"] }
rumbo_logic = { path = "../rumbo_logic" }   