[package]
name = "rumbo_logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
chrono = "0.4.26"
log = "0.4.19"
mongodb = "2.6.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
sysinfo = "0.29.4"
