[package]
name = "rumbo_logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
chrono = {version = "0.4.26", features = ["serde"] }
log = "0.4.19"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
sysinfo = "0.29.4"

diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
dotenvy = "0.15"