[package]
name = "rumbo_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumbo_logic = { path = "../rumbo_logic" }
actix-files = "0.6.2"
actix-web = "4.3.1"
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
